Supporting Moodle 2.6 and 2.9 - Headers are now left aligned instead of centered in 2.6 - Fixed a scroll bar bug in the tree view on 2.6 - DataTables now work in 2.9

--- a/classic_style.css
+++ b/classic_style.css
@@ -22,6 +22,10 @@
  * @license http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
+h1, h2, h3, h4, h5, h6 {
+    text-align: left;
+}
+
 .socialwiki_wikicontent .s-label {
     display: inline;
     padding: .2em .6em .3em;
